# onnxruntime.py

./: .gitignore  .gitmodules  CMakeLists.txt  GetOnnxruntime.ps1  README-dev.md  README.md  build-all.ps1  get_onnxruntime.py  get_version.py  pack_wheel.py  pyproject.toml  requirements.txt
.github/actions/build-wheels/: action.yml
.github/actions/windows-build/: action.yml
.github/actions/windows-prepare/: action.yml
.github/workflows/: build-validation.yml  release-windows.yml  release.yml
example/: run_model_with_random_data.py
example/winml/: README.md  main.py  requirements.txt  winml-requirements.txt
lib-package/: pyproject.toml
native/: VERSION_NUMBER  pyproject.toml  setup.py
src/cpp/: Bindings.cpp  Ortpy.cpp  Ortpy.h  Pyort.cpp  Pyort.h
src/ortpy/: __init__.py
src/ortpy.dist-info.in/: METADATA.in
src/ortpy_lib.dist-info.in/: METADATA.in  WHEEL.in  top_level.txt
src/pyort/: Bindings.cpp  Pyort.cpp  Pyort.h  __init__.py  bindings.cpp
src/pyort.dist-info.in/: METADATA.in
src/pyort_lib.dist-info.in/: METADATA.in  WHEEL  WHEEL.in
