[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "pyort"
version = "0.1.0"
description = "Minimal pybind11 native Python package linking to ONNX Runtime"
readme = "README.md"
authors = [{ name = "Your Name" }]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/your/repo"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
build.verbose = true
cmake.version = ">=3.20"
# Ensure git submodules and ONNX Runtime are included in the source distribution
sdist.include = ["extern/pybind11/**", "onnxruntime/**"]
# Don't try to find pybind11 via pip/conda - use the submodule
cmake.define.PYBIND11_FINDPYTHON = "ON"
