[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "pyort"
version = "0.1.0"
description = "Minimal pybind11 native Python package linking to ONNX Runtime"
readme = "README.md"
authors = [{ name = "Your Name" }]
requires-python = ">=3.8"
dependencies = ["numpy"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: C++",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
with-lib = ["pyort-lib"]

[project.urls]
Homepage = "https://github.com/chemwolf6922/onnxruntime.py"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
build.verbose = true
cmake.version = ">=3.20"
sdist.include = ["extern/pybind11/**", "onnxruntime/**"]
cmake.define.PYBIND11_FINDPYTHON = "ON"
