[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyort-native"
dynamic = ["version"]
description = "Native ONNX Runtime DLLs for pyort package"
readme = "README.md"
authors = [{ name = "Your Name" }]
requires-python = ">=3.8"
dependencies = []
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/chemwolf6922/onnxruntime.py"

[tool.setuptools.packages.find]
include = ["pyort"]

[tool.setuptools.package-data]
pyort = ["*.dll"]

[tool.setuptools.dynamic]
version = { file = "VERSION_NUMBER" }
